--- a/project.srcs/sources_1/bd/top_level/ui/bd_39d0265a.ui
+++ b/project.srcs/sources_1/bd/top_level/ui/bd_39d0265a.ui
@@ -7,62 +7,64 @@
    "No Loops_ExpandedHierarchyInLayout":"",
    "No Loops_Layout":"# # String gsaved with Nlview 7.0r4  2019-12-20 bk=1.5203 VDI=41 GEI=36 GUI=JA:10.0 TLS
 #  -string -flagsOSRD
-preplace port pcie_refclk -pg 1 -lvl 0 -x 0 -y 590 -defaultsOSRD
-preplace port pcie_mgt -pg 1 -lvl 0 -x 0 -y 610 -defaultsOSRD -left
-preplace port qsfp0_clk -pg 1 -lvl 6 -x 1520 -y 250 -defaultsOSRD -right
-preplace port qsfp0_gt -pg 1 -lvl 6 -x 1520 -y 270 -defaultsOSRD
-preplace port qsfp1_gt -pg 1 -lvl 6 -x 1520 -y 60 -defaultsOSRD
-preplace port qsfp1_clk -pg 1 -lvl 6 -x 1520 -y 80 -defaultsOSRD -right
-preplace port port-id_qsfp1_up -pg 1 -lvl 6 -x 1520 -y 120 -defaultsOSRD
-preplace port port-id_qsfp0_up -pg 1 -lvl 6 -x 1520 -y 390 -defaultsOSRD
-preplace port port-id_init_clk -pg 1 -lvl 6 -x 1520 -y 290 -defaultsOSRD -right
-preplace portBus qsfp_lp -pg 1 -lvl 6 -x 1520 -y 520 -defaultsOSRD
-preplace portBus qsfp_rst_l -pg 1 -lvl 6 -x 1520 -y 500 -defaultsOSRD
-preplace inst pcie -pg 1 -lvl 1 -x 160 -y 590 -swap {36 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 0 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 61 57 58 59 60 56 62 63 66 65 64 67} -defaultsOSRD -pinDir M_AXI_B right -pinY M_AXI_B 20R -pinDir S_AXI_LITE right -pinY S_AXI_LITE 0R -pinDir pcie_mgt left -pinY pcie_mgt 20L -pinDir pcie_refclk left -pinY pcie_refclk 0L -pinDir led_pcie_link_up right -pinY led_pcie_link_up 80R -pinDir axi_aclk right -pinY axi_aclk 60R -pinBusDir axi_aresetn right -pinBusY axi_aresetn 40R -pinDir axi_aresetn1 right -pinY axi_aresetn1 120R
-preplace inst eth_0 -pg 1 -lvl 5 -x 1350 -y 250 -swap {5 1 2 3 4 0 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 23 21 22 25 24} -defaultsOSRD -pinDir qsfp_gt right -pinY qsfp_gt 20R -pinDir qsfp_clk right -pinY qsfp_clk 0R -pinDir axis_tx left -pinY axis_tx 0L -pinDir axis_rx left -pinY axis_rx 20L -pinDir sys_resetn left -pinY sys_resetn 140L -pinDir stream_clk left -pinY stream_clk 100L -pinDir stream_resetn left -pinY stream_resetn 120L -pinDir aligned right -pinY aligned 140R -pinDir init_clk right -pinY init_clk 40R
-preplace inst smartconnect -pg 1 -lvl 3 -x 750 -y 500 -swap {104 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 0 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 84 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 145 144} -defaultsOSRD -pinDir S00_AXI left -pinY S00_AXI 110L -pinDir S01_AXI left -pinY S01_AXI 20L -pinDir M00_AXI left -pinY M00_AXI 0L -pinDir M01_AXI left -pinY M01_AXI 90L -pinDir M02_AXI left -pinY M02_AXI 190L -pinDir aclk left -pinY aclk 230L -pinDir aresetn left -pinY aresetn 210L
-preplace inst eth_1 -pg 1 -lvl 5 -x 1350 -y 60 -swap {0 1 2 3 4 5 6 7 15 9 10 11 12 13 14 8 16 17 18 19 20 23 21 22 24 25} -defaultsOSRD -pinDir qsfp_gt right -pinY qsfp_gt 0R -pinDir qsfp_clk right -pinY qsfp_clk 20R -pinDir axis_tx left -pinY axis_tx 20L -pinDir axis_rx left -pinY axis_rx 0L -pinDir sys_resetn left -pinY sys_resetn 80L -pinDir stream_clk left -pinY stream_clk 40L -pinDir stream_resetn left -pinY stream_resetn 60L -pinDir aligned right -pinY aligned 60R -pinDir init_clk right -pinY init_clk 80R
-preplace inst cabletest -pg 1 -lvl 2 -x 450 -y 300 -swap {36 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 24 19 20 21 22 23 18 25 26 27 28 29 30 31 32 33 34 35 0 37 38 39 40 41 43 42 45 44} -defaultsOSRD -pinDir S_AXI right -pinY S_AXI 200R -pinDir AXIS_OUT_0 right -pinY AXIS_OUT_0 40R -pinDir AXIS_IN_0 right -pinY AXIS_IN_0 20R -pinDir AXIS_OUT_1 right -pinY AXIS_OUT_1 60R -pinDir AXIS_IN_1 right -pinY AXIS_IN_1 0R -pinDir clk left -pinY clk 240L -pinDir resetn left -pinY resetn 0L -pinDir eth0_up right -pinY eth0_up 240R -pinDir eth1_up right -pinY eth1_up 220R
-preplace inst cmac_cdc -pg 1 -lvl 4 -x 1010 -y 60 -swap {21 1 2 3 4 5 6 14 8 9 10 11 12 13 0 15 16 17 18 19 20 7 22 23 24 25 26 27 35 29 30 31 32 33 34 42 36 37 38 39 40 41 28 43 44 45 46 47 48 49 50 51 52 53 54 55 64 65 61 62 58 59 63 60 57 56} -defaultsOSRD -pinDir cmac0_rx right -pinY cmac0_rx 210R -pinDir cmac0_tx right -pinY cmac0_tx 190R -pinDir cmac1_rx right -pinY cmac1_rx 0R -pinDir cmac1_tx right -pinY cmac1_tx 20R -pinDir user0_rx left -pinY user0_rx 260L -pinDir user0_tx left -pinY user0_tx 280L -pinDir user1_rx left -pinY user1_rx 240L -pinDir user1_tx left -pinY user1_tx 300L -pinDir user_clk left -pinY user_clk 360L -pinDir user_resetn left -pinY user_resetn 380L -pinDir cmac0_clk right -pinY cmac0_clk 290R -pinDir cmac0_resetn right -pinY cmac0_resetn 310R -pinDir cmac1_clk right -pinY cmac1_clk 230R -pinDir cmac1_resetn right -pinY cmac1_resetn 250R -pinDir cmac0_aligned right -pinY cmac0_aligned 380R -pinDir cmac1_aligned right -pinY cmac1_aligned 270R -pinDir user0_aligned left -pinY user0_aligned 340L -pinDir user1_aligned left -pinY user1_aligned 320L
-preplace inst qsfp_pins -pg 1 -lvl 5 -x 1350 -y 500 -defaultsOSRD -pinBusDir qsfp_rst_l right -pinBusY qsfp_rst_l 0R -pinBusDir qsfp_lp right -pinBusY qsfp_lp 20R
-preplace inst axi_revision -pg 1 -lvl 2 -x 450 -y 690 -defaultsOSRD -pinDir S_AXI right -pinY S_AXI 0R -pinDir AXI_ACLK left -pinY AXI_ACLK 0L -pinDir AXI_ARESETN left -pinY AXI_ARESETN 20L
-preplace netloc cmac_cdc_user0_aligned 1 2 2 620J 400 NJ
-preplace netloc cmac_cdc_user1_aligned 1 2 2 580J 380 NJ
-preplace netloc eth_0_stat_rx_aligned_0 1 4 2 N 440 1500
-preplace netloc eth_0_stream_clk 1 4 1 N 350
-preplace netloc eth_0_stream_resetn 1 4 1 N 370
-preplace netloc eth_1_stat_rx_aligned_0 1 4 2 1220 190 1500
-preplace netloc eth_1_stream_clk 1 4 1 1160 100n
-preplace netloc eth_1_stream_resetn 1 4 1 1180 120n
-preplace netloc init_clk_1 1 5 1 1480 140n
-preplace netloc pcie_axi_aresetn1 1 1 1 N 710
-preplace netloc qsfp_pins_qsfp_lp 1 5 1 NJ 520
-preplace netloc qsfp_pins_qsfp_rst_l 1 5 1 NJ 500
-preplace netloc source_200Mhz_clk 1 1 3 320 630 640 420 N
-preplace netloc source_200Mhz_resetn 1 1 4 300 240 600 440 860 500 1200
-preplace netloc AXIS_IN_0_1 1 2 2 NJ 320 NJ
-preplace netloc AXIS_IN_1_1 1 2 2 NJ 300 NJ
-preplace netloc cabletest_AXIS_OUT_0 1 2 2 NJ 340 NJ
-preplace netloc cabletest_AXIS_OUT_1 1 2 2 NJ 360 N
-preplace netloc cmac_cdc_cmac0_tx 1 4 1 N 250
-preplace netloc cmac_cdc_cmac1_tx 1 4 1 N 80
-preplace netloc cmac_usplus_0_gt_serial_port 1 5 1 NJ 270
-preplace netloc eth_0_axis_rx 1 4 1 N 270
-preplace netloc eth_1_axis_rx 1 4 1 N 60
-preplace netloc eth_1_qsfp_gt 1 5 1 NJ 60
-preplace netloc gt_ref_clk_0_1 1 5 1 NJ 250
-preplace netloc pcie_refclk_1 1 0 1 NJ 590
-preplace netloc qsfp_clk_0_1 1 5 1 NJ 80
-preplace netloc smartconnect_0_M01_AXI 1 1 2 NJ 590 NJ
-preplace netloc smartconnect_M00_AXI 1 2 1 NJ 500
-preplace netloc smartconnect_M02_AXI 1 2 1 NJ 690
-preplace netloc xdma_0_M_AXI_B 1 1 2 NJ 610 NJ
-preplace netloc xdma_0_pcie_mgt 1 0 1 NJ 610
-levelinfo -pg 1 0 160 450 750 1010 1350 1520
-pagesize -pg 1 -db -bbox -sgen -130 0 1680 790
+preplace port pcie_refclk -pg 1 -lvl 0 -x 0 -y 720 -defaultsOSRD
+preplace port pcie_mgt -pg 1 -lvl 0 -x 0 -y 740 -defaultsOSRD -left
+preplace port qsfp0_clk -pg 1 -lvl 6 -x 1640 -y 300 -defaultsOSRD -right
+preplace port qsfp0_gt -pg 1 -lvl 6 -x 1640 -y 320 -defaultsOSRD
+preplace port qsfp1_gt -pg 1 -lvl 6 -x 1640 -y 70 -defaultsOSRD
+preplace port qsfp1_clk -pg 1 -lvl 6 -x 1640 -y 90 -defaultsOSRD -right
+preplace port port-id_qsfp1_up -pg 1 -lvl 6 -x 1640 -y 170 -defaultsOSRD
+preplace port port-id_qsfp0_up -pg 1 -lvl 6 -x 1640 -y 460 -defaultsOSRD
+preplace port port-id_init_clk -pg 1 -lvl 6 -x 1640 -y 340 -defaultsOSRD -right
+preplace portBus qsfp_lp -pg 1 -lvl 6 -x 1640 -y 590 -defaultsOSRD
+preplace portBus qsfp_rst_l -pg 1 -lvl 6 -x 1640 -y 570 -defaultsOSRD
+preplace inst pcie -pg 1 -lvl 1 -x 160 -y 720 -swap {36 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 0 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 61 57 58 59 60 56 62 63 64 65} -defaultsOSRD -pinDir M_AXI_B right -pinY M_AXI_B 20R -pinDir S_AXI_LITE right -pinY S_AXI_LITE 0R -pinDir pcie_mgt left -pinY pcie_mgt 20L -pinDir pcie_refclk left -pinY pcie_refclk 0L -pinDir axi_aclk right -pinY axi_aclk 40R -pinBusDir axi_aresetn right -pinBusY axi_aresetn 60R
+preplace inst eth_0 -pg 1 -lvl 5 -x 1470 -y 300 -swap {5 1 2 3 4 0 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 27 22 23 25 24 21 26} -defaultsOSRD -pinDir qsfp_gt right -pinY qsfp_gt 20R -pinDir qsfp_clk right -pinY qsfp_clk 0R -pinDir axis_tx left -pinY axis_tx 0L -pinDir axis_rx left -pinY axis_rx 20L -pinDir sys_resetn left -pinY sys_resetn 160L -pinDir stream_clk left -pinY stream_clk 100L -pinDir stream_resetn left -pinY stream_resetn 120L -pinDir aligned right -pinY aligned 160R -pinDir init_clk right -pinY init_clk 40R -pinDir rsfec_enable left -pinY rsfec_enable 40L -pinBusDir tx_pre left -pinBusY tx_pre 140L
+preplace inst smartconnect -pg 1 -lvl 3 -x 810 -y 570 -swap {104 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 0 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 84 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 145 144} -defaultsOSRD -pinDir S00_AXI left -pinY S00_AXI 170L -pinDir S01_AXI left -pinY S01_AXI 20L -pinDir M00_AXI left -pinY M00_AXI 0L -pinDir M01_AXI left -pinY M01_AXI 150L -pinDir M02_AXI left -pinY M02_AXI 250L -pinDir aclk left -pinY aclk 290L -pinDir aresetn left -pinY aresetn 270L
+preplace inst eth_1 -pg 1 -lvl 5 -x 1470 -y 70 -swap {0 1 2 3 4 5 6 7 15 9 10 11 12 13 14 8 16 17 18 19 20 27 23 22 24 25 21 26} -defaultsOSRD -pinDir qsfp_gt right -pinY qsfp_gt 0R -pinDir qsfp_clk right -pinY qsfp_clk 20R -pinDir axis_tx left -pinY axis_tx 20L -pinDir axis_rx left -pinY axis_rx 0L -pinDir sys_resetn left -pinY sys_resetn 120L -pinDir stream_clk left -pinY stream_clk 80L -pinDir stream_resetn left -pinY stream_resetn 60L -pinDir aligned right -pinY aligned 100R -pinDir init_clk right -pinY init_clk 120R -pinDir rsfec_enable left -pinY rsfec_enable 40L -pinBusDir tx_pre left -pinBusY tx_pre 100L
+preplace inst cabletest -pg 1 -lvl 2 -x 450 -y 350 -swap {36 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 24 19 20 21 22 23 18 25 26 27 28 29 30 31 32 33 34 35 0 37 38 39 40 41 42 43 46 45 47 44 48} -defaultsOSRD -pinDir S_AXI right -pinY S_AXI 220R -pinDir AXIS_OUT_0 right -pinY AXIS_OUT_0 40R -pinDir AXIS_IN_0 right -pinY AXIS_IN_0 20R -pinDir AXIS_OUT_1 right -pinY AXIS_OUT_1 60R -pinDir AXIS_IN_1 right -pinY AXIS_IN_1 0R -pinDir clk left -pinY clk 0L -pinDir resetn left -pinY resetn 320L -pinDir eth0_up right -pinY eth0_up 280R -pinDir eth1_up right -pinY eth1_up 260R -pinDir resetn_out right -pinY resetn_out 300R -pinDir RSFEC_ENABLE right -pinY RSFEC_ENABLE 240R -pinBusDir CMAC_TXPRE right -pinBusY CMAC_TXPRE 320R
+preplace inst cmac_cdc -pg 1 -lvl 4 -x 1090 -y 70 -swap {21 1 2 3 4 5 6 14 8 9 10 11 12 13 0 15 16 17 18 19 20 7 22 23 24 25 26 27 35 29 30 31 32 33 34 42 36 37 38 39 40 41 28 43 44 45 46 47 48 49 50 51 52 53 54 55 65 64 61 62 59 58 63 60 57 56} -defaultsOSRD -pinDir cmac0_rx right -pinY cmac0_rx 250R -pinDir cmac0_tx right -pinY cmac0_tx 230R -pinDir cmac1_rx right -pinY cmac1_rx 0R -pinDir cmac1_tx right -pinY cmac1_tx 20R -pinDir user0_rx left -pinY user0_rx 300L -pinDir user0_tx left -pinY user0_tx 320L -pinDir user1_rx left -pinY user1_rx 280L -pinDir user1_tx left -pinY user1_tx 340L -pinDir user_clk left -pinY user_clk 440L -pinDir user_resetn left -pinY user_resetn 420L -pinDir cmac0_clk right -pinY cmac0_clk 330R -pinDir cmac0_resetn right -pinY cmac0_resetn 350R -pinDir cmac1_clk right -pinY cmac1_clk 290R -pinDir cmac1_resetn right -pinY cmac1_resetn 270R -pinDir cmac0_aligned right -pinY cmac0_aligned 440R -pinDir cmac1_aligned right -pinY cmac1_aligned 310R -pinDir user0_aligned left -pinY user0_aligned 380L -pinDir user1_aligned left -pinY user1_aligned 360L
+preplace inst qsfp_pins -pg 1 -lvl 5 -x 1470 -y 570 -defaultsOSRD -pinBusDir qsfp_rst_l right -pinBusY qsfp_rst_l 0R -pinBusDir qsfp_lp right -pinBusY qsfp_lp 20R
+preplace inst axi_revision -pg 1 -lvl 2 -x 450 -y 820 -defaultsOSRD -pinDir S_AXI right -pinY S_AXI 0R -pinDir AXI_ACLK left -pinY AXI_ACLK 0L -pinDir AXI_ARESETN left -pinY AXI_ARESETN 20L
+preplace netloc cabletest_CMAC_TXPRE 1 2 3 680J 490 920J 570 1300
+preplace netloc cabletest_RSFEC_ENABLE 1 2 3 580 10 NJ 10 1280J
+preplace netloc cabletest_resetn_out 1 2 3 660J 470 940J 590 1340
+preplace netloc cmac_cdc_user0_aligned 1 2 2 620J 450 NJ
+preplace netloc cmac_cdc_user1_aligned 1 2 2 600J 430 NJ
+preplace netloc eth_0_stat_rx_aligned_0 1 4 2 N 510 1620
+preplace netloc eth_0_stream_clk 1 4 1 N 400
+preplace netloc eth_0_stream_resetn 1 4 1 N 420
+preplace netloc eth_1_stat_rx_aligned_0 1 4 2 1320 240 1620
+preplace netloc eth_1_stream_clk 1 4 1 1260 150n
+preplace netloc eth_1_stream_resetn 1 4 1 1240 130n
+preplace netloc init_clk_1 1 5 1 1600 190n
+preplace netloc qsfp_pins_qsfp_lp 1 5 1 NJ 590
+preplace netloc qsfp_pins_qsfp_rst_l 1 5 1 NJ 570
+preplace netloc source_200Mhz_clk 1 1 3 320 760 700 510 N
+preplace netloc source_200Mhz_resetn 1 1 2 300 290 640
+preplace netloc AXIS_IN_0_1 1 2 2 NJ 370 NJ
+preplace netloc AXIS_IN_1_1 1 2 2 NJ 350 NJ
+preplace netloc cabletest_AXIS_OUT_0 1 2 2 NJ 390 NJ
+preplace netloc cabletest_AXIS_OUT_1 1 2 2 NJ 410 N
+preplace netloc cmac_cdc_cmac0_tx 1 4 1 N 300
+preplace netloc cmac_cdc_cmac1_tx 1 4 1 N 90
+preplace netloc cmac_usplus_0_gt_serial_port 1 5 1 NJ 320
+preplace netloc eth_0_axis_rx 1 4 1 N 320
+preplace netloc eth_1_axis_rx 1 4 1 N 70
+preplace netloc eth_1_qsfp_gt 1 5 1 NJ 70
+preplace netloc gt_ref_clk_0_1 1 5 1 NJ 300
+preplace netloc pcie_refclk_1 1 0 1 NJ 720
+preplace netloc qsfp_clk_0_1 1 5 1 NJ 90
+preplace netloc smartconnect_0_M01_AXI 1 1 2 NJ 720 NJ
+preplace netloc smartconnect_M00_AXI 1 2 1 NJ 570
+preplace netloc smartconnect_M02_AXI 1 2 1 NJ 820
+preplace netloc xdma_0_M_AXI_B 1 1 2 NJ 740 NJ
+preplace netloc xdma_0_pcie_mgt 1 0 1 NJ 740
+levelinfo -pg 1 0 160 450 810 1090 1470 1640
+pagesize -pg 1 -db -bbox -sgen -130 0 1800 920
 ",
-   "No Loops_ScaleFactor":"0.751252",
-   "No Loops_TopLeft":"-126,-52",
+   "No Loops_ScaleFactor":"0.918101",
+   "No Loops_TopLeft":"132,0",
    "guistr":"# # String gsaved with Nlview 7.0r4  2019-12-20 bk=1.5203 VDI=41 GEI=36 GUI=JA:10.0 TLS
 #  -string -flagsOSRD
 preplace port port-id_clk -pg 1 -lvl 0 -x -10 -y 60 -defaultsOSRD
