--- a/project.srcs/sources_1/bd/top_level/ui/bd_eade1875.ui
+++ b/project.srcs/sources_1/bd/top_level/ui/bd_eade1875.ui
@@ -7,45 +7,51 @@
    "No Loops_ExpandedHierarchyInLayout":"",
    "No Loops_Layout":"# # String gsaved with Nlview 7.0r4  2019-12-20 bk=1.5203 VDI=41 GEI=36 GUI=JA:10.0 TLS
 #  -string -flagsOSRD
-preplace port S_AXI -pg 1 -lvl 0 -x 0 -y 170 -defaultsOSRD
+preplace port S_AXI -pg 1 -lvl 0 -x 0 -y 120 -defaultsOSRD
 preplace port AXIS_OUT_0 -pg 1 -lvl 4 -x 1260 -y 240 -defaultsOSRD
-preplace port AXIS_IN_0 -pg 1 -lvl 0 -x 0 -y 70 -defaultsOSRD
-preplace port AXIS_OUT_1 -pg 1 -lvl 4 -x 1260 -y 400 -defaultsOSRD
-preplace port AXIS_IN_1 -pg 1 -lvl 0 -x 0 -y 400 -defaultsOSRD
-preplace port port-id_clk -pg 1 -lvl 0 -x 0 -y 130 -defaultsOSRD
-preplace port port-id_resetn -pg 1 -lvl 0 -x 0 -y 110 -defaultsOSRD
-preplace port port-id_eth0_up -pg 1 -lvl 0 -x 0 -y 230 -defaultsOSRD
-preplace port port-id_eth1_up -pg 1 -lvl 0 -x 0 -y 250 -defaultsOSRD
-preplace inst channel_0 -pg 1 -lvl 2 -x 670 -y 70 -swap {0 1 2 3 4 5 6 7 8 9 10 11 12 13 18 15 17 14 16} -defaultsOSRD -pinDir AXIS_OUT right -pinY AXIS_OUT 170R -pinDir AXIS_IN left -pinY AXIS_IN 0L -pinDir clk left -pinY clk 20L -pinDir resetn left -pinY resetn 40L -pinBusDir CYCLES_PER_PACKET left -pinBusY CYCLES_PER_PACKET 200L -pinBusDir pg_control left -pinBusY pg_control 140L -pinBusDir PACKET_COUNT left -pinBusY PACKET_COUNT 180L -pinBusDir pg_status left -pinBusY pg_status 120L -pinBusDir pr_status left -pinBusY pr_status 160L
-preplace inst channel_1 -pg 1 -lvl 2 -x 670 -y 400 -swap {0 1 2 3 4 5 6 7 8 9 10 11 12 13 15 16 14 17 18} -defaultsOSRD -pinDir AXIS_OUT right -pinY AXIS_OUT 0R -pinDir AXIS_IN left -pinY AXIS_IN 0L -pinDir clk left -pinY clk 20L -pinDir resetn left -pinY resetn 40L -pinBusDir CYCLES_PER_PACKET left -pinBusY CYCLES_PER_PACKET 80L -pinBusDir control left -pinBusY control 100L -pinBusDir PACKET_COUNT left -pinBusY PACKET_COUNT 60L -pinBusDir pg_status left -pinBusY pg_status 120L -pinBusDir pr_status left -pinBusY pr_status 140L
-preplace inst cabletest_ctl -pg 1 -lvl 1 -x 210 -y 170 -swap {0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 19 18 20 21 24 28 23 29 25 30 27 26 22} -defaultsOSRD -pinDir S_AXI left -pinY S_AXI 0L -pinDir clk left -pinY clk 40L -pinDir resetn left -pinY resetn 20L -pinDir eth0_up left -pinY eth0_up 60L -pinDir eth1_up left -pinY eth1_up 80L -pinBusDir pg_control_1 right -pinBusY pg_control_1 40R -pinBusDir pg_control_2 right -pinBusY pg_control_2 130R -pinBusDir pg_status_1 right -pinBusY pg_status_1 20R -pinBusDir pg_status_2 right -pinBusY pg_status_2 150R -pinBusDir pr_status_1 right -pinBusY pr_status_1 60R -pinBusDir pr_status_2 right -pinBusY pr_status_2 170R -pinBusDir CYCLES_PER_PACKET right -pinBusY CYCLES_PER_PACKET 100R -pinBusDir PACKET_COUNT right -pinBusY PACKET_COUNT 80R -pinBusDir BYTES_PER_USEC right -pinBusY BYTES_PER_USEC 0R
-preplace inst rate_limiter_0 -pg 1 -lvl 3 -x 1060 -y 240 -swap {0 1 2 3 4 5 6 7 8 9 10 11 14 13 12} -defaultsOSRD -pinDir AXIS_IN left -pinY AXIS_IN 0L -pinDir AXIS_OUT right -pinY AXIS_OUT 0R -pinDir clk left -pinY clk 60L -pinDir resetn left -pinY resetn 40L -pinBusDir BYTES_PER_USEC left -pinBusY BYTES_PER_USEC 20L
-preplace inst rate_limiter_1 -pg 1 -lvl 3 -x 1060 -y 400 -swap {0 1 2 3 4 5 6 7 8 9 10 11 14 13 12} -defaultsOSRD -pinDir AXIS_IN left -pinY AXIS_IN 0L -pinDir AXIS_OUT right -pinY AXIS_OUT 0R -pinDir clk left -pinY clk 60L -pinDir resetn left -pinY resetn 40L -pinBusDir BYTES_PER_USEC left -pinBusY BYTES_PER_USEC 20L
-preplace netloc cabletest_ctl_CYCLES_PER_PACKET 1 1 1 440 270n
-preplace netloc cabletest_ctl_PACKET_COUNT 1 1 1 460 250n
-preplace netloc cabletest_ctl_pg_control_1 1 1 1 N 210
-preplace netloc channel_0_status 1 1 1 N 190
-preplace netloc channel_0_status1 1 1 1 N 230
-preplace netloc channel_1_pg_status 1 1 1 400 320n
-preplace netloc channel_1_pr_status 1 1 1 380 340n
-preplace netloc cmac_cdc_user0_aligned 1 0 1 NJ 230
-preplace netloc cmac_cdc_user1_aligned 1 0 1 NJ 250
-preplace netloc control_1 1 1 1 420 300n
-preplace netloc source_200Mhz_clk 1 0 3 40 90 500 340 880
-preplace netloc source_200Mhz_resetn 1 0 3 20 110 480 320 860
-preplace netloc cabletest_ctl_BYTES_PER_USEC 1 1 2 380 10 840J
-preplace netloc Conn2 1 0 2 NJ 70 NJ
-preplace netloc Conn4 1 0 2 NJ 400 NJ
-preplace netloc smartconnect_M00_AXI 1 0 1 NJ 170
-preplace netloc rate_limiter_0_AXIS_OUT 1 3 1 N 240
+preplace port AXIS_IN_0 -pg 1 -lvl 0 -x 0 -y 60 -defaultsOSRD
+preplace port AXIS_OUT_1 -pg 1 -lvl 4 -x 1260 -y 470 -defaultsOSRD
+preplace port AXIS_IN_1 -pg 1 -lvl 0 -x 0 -y 530 -defaultsOSRD
+preplace port port-id_clk -pg 1 -lvl 0 -x 0 -y 410 -defaultsOSRD
+preplace port port-id_resetn -pg 1 -lvl 0 -x 0 -y 430 -defaultsOSRD
+preplace port port-id_eth0_up -pg 1 -lvl 0 -x 0 -y 450 -defaultsOSRD
+preplace port port-id_eth1_up -pg 1 -lvl 0 -x 0 -y 470 -defaultsOSRD
+preplace port port-id_resetn_out -pg 1 -lvl 4 -x 1260 -y 410 -defaultsOSRD
+preplace port port-id_RSFEC_ENABLE -pg 1 -lvl 4 -x 1260 -y 160 -defaultsOSRD
+preplace portBus CMAC_TXPRE -pg 1 -lvl 4 -x 1260 -y 180 -defaultsOSRD
+preplace inst channel_0 -pg 1 -lvl 2 -x 650 -y 60 -swap {0 1 2 3 4 5 6 7 8 9 10 11 18 16 17 14 15 13 12} -defaultsOSRD -pinDir AXIS_OUT right -pinY AXIS_OUT 180R -pinDir AXIS_IN left -pinY AXIS_IN 0L -pinDir clk left -pinY clk 180L -pinDir resetn left -pinY resetn 140L -pinBusDir CYCLES_PER_PACKET left -pinBusY CYCLES_PER_PACKET 160L -pinBusDir pg_control left -pinBusY pg_control 100L -pinBusDir PACKET_COUNT left -pinBusY PACKET_COUNT 120L -pinBusDir pg_status left -pinBusY pg_status 80L -pinBusDir pr_status left -pinBusY pr_status 60L
+preplace inst channel_1 -pg 1 -lvl 2 -x 650 -y 470 -swap {0 1 2 3 4 5 6 7 8 9 10 11 18 13 14 17 12 15 16} -defaultsOSRD -pinDir AXIS_OUT right -pinY AXIS_OUT 0R -pinDir AXIS_IN left -pinY AXIS_IN 60L -pinDir clk left -pinY clk 200L -pinDir resetn left -pinY resetn 100L -pinBusDir CYCLES_PER_PACKET left -pinBusY CYCLES_PER_PACKET 120L -pinBusDir control left -pinBusY control 180L -pinBusDir PACKET_COUNT left -pinBusY PACKET_COUNT 80L -pinBusDir pg_status left -pinBusY pg_status 140L -pinBusDir pr_status left -pinBusY pr_status 160L
+preplace inst rate_limiter_0 -pg 1 -lvl 3 -x 1060 -y 240 -swap {0 1 2 3 4 5 6 7 8 9 10 11 13 12 14} -defaultsOSRD -pinDir AXIS_IN left -pinY AXIS_IN 0L -pinDir AXIS_OUT right -pinY AXIS_OUT 0R -pinDir clk left -pinY clk 70L -pinDir resetn left -pinY resetn 50L -pinBusDir BYTES_PER_USEC left -pinBusY BYTES_PER_USEC 110L
+preplace inst rate_limiter_1 -pg 1 -lvl 3 -x 1060 -y 470 -swap {0 1 2 3 4 5 6 7 8 9 10 11 13 12 14} -defaultsOSRD -pinDir AXIS_IN left -pinY AXIS_IN 0L -pinDir AXIS_OUT right -pinY AXIS_OUT 0R -pinDir clk left -pinY clk 40L -pinDir resetn left -pinY resetn 20L -pinBusDir BYTES_PER_USEC left -pinBusY BYTES_PER_USEC 60L
+preplace inst cabletest_ctl -pg 1 -lvl 1 -x 190 -y 120 -swap {0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 24 33 23 31 22 32 29 25 30 28 26 27} -defaultsOSRD -pinDir S_AXI left -pinY S_AXI 0L -pinDir clk left -pinY clk 290L -pinDir resetn left -pinY resetn 310L -pinDir eth0_up left -pinY eth0_up 330L -pinDir eth1_up left -pinY eth1_up 350L -pinBusDir pg_control_1 right -pinBusY pg_control_1 40R -pinBusDir pg_control_2 right -pinBusY pg_control_2 350R -pinBusDir pg_status_1 right -pinBusY pg_status_1 20R -pinBusDir pg_status_2 right -pinBusY pg_status_2 310R -pinBusDir pr_status_1 right -pinBusY pr_status_1 0R -pinBusDir pr_status_2 right -pinBusY pr_status_2 330R -pinBusDir CYCLES_PER_PACKET right -pinBusY CYCLES_PER_PACKET 270R -pinBusDir PACKET_COUNT right -pinBusY PACKET_COUNT 60R -pinBusDir BYTES_PER_USEC right -pinBusY BYTES_PER_USEC 290R -pinDir RSFEC_ENABLE right -pinY RSFEC_ENABLE 250R -pinBusDir CMAC_TXPRE right -pinBusY CMAC_TXPRE 210R -pinDir resetn_out right -pinY resetn_out 230R
+preplace netloc cabletest_ctl_BYTES_PER_USEC 1 1 2 N 410 860
+preplace netloc cabletest_ctl_CMAC_TXPRE 1 1 3 N 330 860J 180 NJ
+preplace netloc cabletest_ctl_CYCLES_PER_PACKET 1 1 1 480 220n
+preplace netloc cabletest_ctl_PACKET_COUNT 1 1 1 440 180n
+preplace netloc cabletest_ctl_RSFEC_ENABLE 1 1 3 N 370 840J 160 NJ
+preplace netloc cabletest_ctl_pg_control_1 1 1 1 N 160
+preplace netloc cabletest_ctl_resetn_out 1 1 3 460 290 880 410 NJ
+preplace netloc channel_0_status 1 1 1 N 140
+preplace netloc channel_0_status1 1 1 1 N 120
+preplace netloc channel_1_pg_status 1 1 1 400 430n
+preplace netloc channel_1_pr_status 1 1 1 380 450n
+preplace netloc cmac_cdc_user0_aligned 1 0 1 NJ 450
+preplace netloc cmac_cdc_user1_aligned 1 0 1 NJ 470
+preplace netloc control_1 1 1 1 360 470n
+preplace netloc source_200Mhz_clk 1 0 3 20 550 420 310 820
+preplace netloc source_200Mhz_resetn 1 0 1 NJ 430
+preplace netloc Conn2 1 0 2 NJ 60 NJ
+preplace netloc Conn4 1 0 2 NJ 530 NJ
 preplace netloc channel_0_AXIS_OUT 1 2 1 N 240
-preplace netloc channel_1_AXIS_OUT 1 2 1 N 400
-preplace netloc rate_limiter_1_AXIS_OUT 1 3 1 N 400
-levelinfo -pg 1 0 210 670 1060 1260
-pagesize -pg 1 -db -bbox -sgen -120 0 1400 590
+preplace netloc channel_1_AXIS_OUT 1 2 1 N 470
+preplace netloc rate_limiter_0_AXIS_OUT 1 3 1 NJ 240
+preplace netloc rate_limiter_1_AXIS_OUT 1 3 1 NJ 470
+preplace netloc smartconnect_M00_AXI 1 0 1 NJ 120
+levelinfo -pg 1 0 190 650 1060 1260
+pagesize -pg 1 -db -bbox -sgen -120 0 1440 720
 ",
-   "No Loops_ScaleFactor":"0.859499",
-   "No Loops_TopLeft":"-120,-113",
+   "No Loops_ScaleFactor":"1.0",
+   "No Loops_TopLeft":"-221,-74",
    "guistr":"# # String gsaved with Nlview 7.0r4  2019-12-20 bk=1.5203 VDI=41 GEI=36 GUI=JA:10.0 TLS
 #  -string -flagsOSRD
 preplace port S_AXI -pg 1 -lvl 0 -x -50 -y 160 -defaultsOSRD
