--- a/project.srcs/sources_1/bd/top_level/ui/bd_eade1875.ui
+++ b/project.srcs/sources_1/bd/top_level/ui/bd_eade1875.ui
@@ -51,7 +51,7 @@ levelinfo -pg 1 0 190 650 1060 1260
 pagesize -pg 1 -db -bbox -sgen -120 0 1440 720
 ",
    "No Loops_ScaleFactor":"1.0",
-   "No Loops_TopLeft":"-221,-74",
+   "No Loops_TopLeft":"-221,47",
    "guistr":"# # String gsaved with Nlview 7.0r4  2019-12-20 bk=1.5203 VDI=41 GEI=36 GUI=JA:10.0 TLS
 #  -string -flagsOSRD
 preplace port S_AXI -pg 1 -lvl 0 -x -50 -y 160 -defaultsOSRD
